# Cplusplus

./: .gitignore
ClipboardToKeys/: ClipboardToKeys.sln
ClipboardToKeys/ClipboardToKeys/: ClipboardToKeys.aps  ClipboardToKeys.cpp  ClipboardToKeys.rc  ClipboardToKeys.vcxproj  ClipboardToKeys.vcxproj.filters  EditControl.cpp  GetTextFromClipBoard.cpp  GetTextFromClipBoard.h  Resource.h
MovingTriangle/: MovingTriangle.sln
MovingTriangle/MovingTriangle/: CounterPainter.cpp  CounterPainter.h  MovingTriangle.cpp  MovingTriangle.rc  MovingTriangle.vcxproj  MovingTriangle.vcxproj.filters  PaintBuffer.cpp  PaintBuffer.h  Painter.cpp  Painter.h  Resource.h  ShapePainter.h  Shapes.cpp  Shapes.h  TrianglePainter.cpp  TrianglePainter.h
Sudoku/: Sudoku.sln
Sudoku/Sudoku/: Resource.h  Sudoku.aps  Sudoku.cpp  Sudoku.rc  Sudoku.vcxproj  Sudoku.vcxproj.filters  SudokuCells.cpp  SudokuCells.h  SudokuFileDlg.cpp  SudokuFileDlg.h  SudokuPainter.cpp  SudokuPainter.h
Sudoku/SudokuTest/: SudokuTest.vcxproj  test.cpp
Sudoku/WinAPIPainter/: PaintBuffer.cpp  PaintBuffer.h  Painter.cpp  Painter.h  WinAPIPainter.cpp  WinAPIPainter.vcxproj  WinAPIPainter.vcxproj.filters  framework.h
TermParser/: CMakeLists.txt
TermParser/implementation/: CMakeLists.txt  termparser.cpp
TermParser/implementation/include/TermParser/: keyvaluenode.hpp  termparser.hpp
TermParser/test/: CMakeLists.txt  Test_KeyValueNode.cpp  Test_TermParser.cpp
VariadicCallback/: CMakeLists.txt  main.cpp
asynchronous/: CMakeLists.txt
asynchronous/implementation/: CMakeLists.txt  lazy_thread_pool.cpp  run_tasks.cpp
asynchronous/implementation/include/asynchronous/: barrier.hpp  cappedqueue.hpp  doneflag.hpp  futurevalue.hpp  latch.hpp  lazy_thread_pool.hpp  onetimesignal.hpp  queue.hpp  repeat.hpp  run_tasks.hpp  scheduler.hpp  shared_resource.hpp  start_threads.hpp  synchronizedvalue.hpp  waiter.hpp
asynchronous/implementation/include/asynchronous/traits/: types.hpp
asynchronous/test/: CMakeLists.txt  Test_LazyThreadPool.cpp  Test_OneTimeSignal.cpp  Test_Queue.cpp  Test_Repeat.cpp  Test_Scheduler.cpp  Test_SharedQueue.cpp  Test_SynchronizedValue.cpp  Test_Waiter.cpp  Test_barrier.cpp  Test_latch.cpp  Test_start_threads.cpp  run_tasks_test.cpp
streamfunctions/: CMakeLists.txt
streamfunctions/implementation/: CMakeLists.txt  streamfunctions.cpp
streamfunctions/implementation/include/streamfunctions/: StreamFunctions.hpp
streamfunctions/test/: CMakeLists.txt  TestStreamFunctions.cpp
